load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "auth_token.go",
        "headers.go",
    ],
    importpath = "github.com/theQRL/qrysm/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@com_github_theqrl_go_qrl//common/hexutil",
    ],
)
