config_setting(
    name = "mainnet",
    flag_values = {
        "//proto:network": "mainnet",
    },
)

config_setting(
    name = "minimal",
    flag_values = {
        "//proto:network": "minimal",
    },
)

config_setting(
    name = "betanet",
    flag_values = {
        "//proto:network": "betanet",
    },
)