load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "journald",
    srcs = [
        "journald.go",
        "journald_linux.go",
        "journalhook_linux.go",
    ],
    importpath = "github.com/theQRL/qrysm/monitoring/journald",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_coreos_go_systemd//journal",
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_coreos_go_systemd//journal",
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "journald_test",
    srcs = ["journalhook_linux_test.go"],
    embed = [":journald"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_sirupsen_logrus//:logrus",
        ],
        "//conditions:default": [],
    }),
)
